# mytest

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: common1.hpp  face_verify.hpp  feature_extractor.hpp  get_face.hpp  lightened_cnn.hpp  mtcnn.hpp
include/caffe/util/: device_alternate.hpp
sqlite/: Makefile  demo  face.db
sqlite/include/: facedb.hpp
sqlite/src/: facedb.cpp  main.cpp
src/: faceID.cpp
src/driver/: face_align.cpp  feature_extractor.cpp  get_face.cpp  lightened_cnn.cpp  mtcnn.cpp  scale_angle.cpp
